src/objects/cmbp_Custom_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom settings for class management business process</description>
    <fields>
        <fullName>MA_Lead_Owner__c</fullName>
        <label>MA Lead Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgWideEmailAddress__c</fullName>
        <label>OrgWideEmailAddress</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RI_Lead_Owner__c</fullName>
        <label>RI Lead Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Contact__c</fullName>
        <label>Website Contact</label>
        <type>Url</type>
    </fields>
    <label>cmbp Class Management</label>
</CustomObject>